--- a/21.Quake3Explorer/Quake3Explorer.cbp
+++ b/21.Quake3Explorer/Quake3Explorer.cbp
@@ -14,12 +14,15 @@
 				<Compiler>
 					<Add option="-g" />
 					<Add option="-D_IRR_STATIC_LIB_" />
+					<Add directory="/home/Dev/libs/Irrlicht/include" />
+					<Add directory="../../../../Dev/libs/Irrlicht/source/Irrlicht" />
 				</Compiler>
 				<Linker>
 					<Add library="Xxf86vm" />
 					<Add library="X11" />
 					<Add library="GL" />
 					<Add directory="../../lib/Linux" />
+					<Add directory="/home/Dev/libs/Irrlicht/lib/Linux" />
 				</Linker>
 			</Target>
 			<Target title="Windows">
